--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "url": "git@github.com:jeanregisser/react-native-slider.git"
   },
   "dependencies": {
-    "prop-types": "^15.5.6"
+    "prop-types": "^15.5.6",
+       "deprecated-react-native-prop-types": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
